www/css/styles.css
html {
    height: 100%;
}

body {
    font-family: sans-serif;
    font-size: 16px;
    background: #ffffff;
    margin: 0;
    padding: 0;
    height: 100%;
    background-color: #fff;
    overflow: hidden;
    position: relative;
    text-transform: none;
}

a, a:visited {
    color: #0d1d41;
    text-decoration: underline;
}

    a:hover {
        color: #ccc;
        text-decoration: none;
    }

.header {
    background: #0d1d41;
    -webkit-background-size: 1px 44px;
    -moz-background-size: 1px 44px;
    -ms-background-size: 1px 44px;
    -o-background-size: 1px 44px;
    background-size: 1px 44px;
    width: 100%;
    color: #fff;
    -webkit-user-select: none;
    -webkit-touch-callout: none;
    border-bottom: solid 0px #eee;
    display: inline-block;
   
}

    .header .contHeader {
         height: 70px;
    }

    .header h1 {
        padding: 0;
        text-align: center;
        font-size: 20px;
        margin: 0;
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
        -webkit-box-flex: 1;
        -moz-box-flex: 1;
        box-flex: 1;
    }

    .header.large-header {
        height: auto;
        display: inline-block;
        line-height: auto;
    }

    .header.large-header .logo-header {
        max-width:40%;
        min-width:230px;
        margin:40px 0px 0px;
    }

.header-button {
    position: absolute;
    top: 0px;
    padding: 22px 10px;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    line-height: 1em;
    font-size: 22px;
    color: #fff;
    text-decoration: none;
}

    .header-button-left {
        left: 0;
    }

    .header-button-right {
        right: 0;
    }

    .logo-header {
        width: 60%;
        max-width: 170px;
        margin: 22px 0px 6px;
    }

    .arrow {
        border: solid #ffffff;
        border-width: 0 3px 3px 0;
        display: inline-block;
        padding: 3px;
        vertical-align: middle;
    }
        .header-button.arrow {
            margin: 30px 14px;
            padding: 6px;
        }

    .arrow.right {
        transform: rotate(-45deg);
        -ms-transform: rotate(-45deg);
        -webkit-transform: rotate(-45deg);
    }

    .arrow.left {
        transform: rotate(135deg);
        -ms-transform: rotate(135deg);
        -webkit-transform: rotate(135deg);
    }

    .arrow.up {
        transform: rotate(-135deg);
        -ms-transform: rotate(-135deg);
        -webkit-transform: rotate(-135deg);
    }

    .arrow.down {
        transform: rotate(45deg);
        -ms-transform: rotate(45deg);
        -webkit-transform: rotate(45deg);
    }

.barraTitle {
    background: #ecedf2;
    padding: 8px 12px;
    text-transform: uppercase;
    color:#0d1d41;
    font-weight: bold;
    height: 20px;
}

.footer-button {
    position: absolute;
    bottom: 0;
    padding: 4px 0px 10px;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    line-height: 1em;
    background: #0d1d41;
    /*height: 44px;
    line-height: 44px;*/
    width: 100%;
    color: #fff;
    -webkit-user-select: none;
    -webkit-touch-callout: none;
    text-align:center;
}

    /* LISTA LINGUE LOGIN PAGE */
    .footer-button ul.flag-list {
        list-style-type: none;
        margin:4px 0px;
        padding: 0px;
        overflow: hidden;
        background: #0d1d41;
        width: auto;
        display: inline-block;
        border-bottom: 0px;
    }

        .footer-button ul.flag-list li {
            float: left;
            border: none;
            background: #0d1d41;
            padding:8px 14px;
            width:auto;
            border-bottom: 1px solid #0d1d41;
        }
            .footer-button ul.flag-list li div.actual {
                border-bottom: 1px solid #ffffff;
            }

        .footer-button ul.flag-list li>a {
            background: #0d1d41;
            display: block;
            padding:2px 16px;
            text-align: center;
            text-decoration:none;
            color: #ffffff;
            width:auto;
        }

    /* LISTA CATALOGO HOME PAGE */
    .footer-button ul.catalog-list {
        list-style-type: none;
        margin:0px;
        padding: 0px;
        overflow: hidden;
        background: #0d1d41;
        width: 100%;
        display: block;
        border-bottom: 0px;
    }

        .footer-button ul.catalog-list li {
            border: none;
            background: #0d1d41;
            padding:12px 0px;
            width:100%;
            display: block;
            text-align:center;
            border-bottom: 1px solid #545454;
            text-transform: uppercase;
            font-weight: bold;
        }

        .footer-button ul.catalog-list li:last-child {
            border-bottom: 0px solid #545454;
        }

        .footer-button ul.catalog-list li a, .footer-button ul.catalog-list li a:hover, .footer-button ul.catalog-list li a:visited {
            color: #fff;
            text-decoration: none;
        }


    /* LISTA ITEM */
    ul.category-list, ul.employee-list, ul.catalog-list-int  {
        list-style-type: none;
        margin:0px;
        padding: 0px;
        overflow: hidden;
        background: #ffffff;
        width: 100%;
        display: block;
        border-bottom: 0px;
    }

        ul.category-list li, ul.catalog-list-int li {
            border: none;
            background: #ffffff;
            padding:12px 10px;
            width:100%;
            display: block;
            text-align:left;
            border-bottom: 1px solid #545454;
            text-transform: uppercase;
            font-weight: bold;
        }

            ul.category-list li small, ul.catalog-list-int li small {
                display: block;
                font-size: 11px;
                font-weight: normal;
            }
/* ... */

